# deli

./: .gitignore  Copy.hs  LICENSE  Makefile  README.md  build-docs.sh  deli.cabal  simian.cabal  stack.yaml
app/: LoadBalancer.hs  Main.hs  Performance.hs  Tutorial.lhs  Webhooks.hs
docs/: contributing.md  overview.md  user-guide.md
experiment/: Main.hs
src/: Deli.hs
src/Control/Monad/: Concurrent.hs  Deli.hs
src/Control/Monad/State/: CPS.hs
src/Deli/: Printer.hs  Random.hs  Webhooks.hs
test/: Correctness.hs  SpaceLeak.hs  Spec.hs
