name:                deli
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/github/deli
license:             BSD3
license-file:        LICENSE
author:              Reid Draper
maintainer:          opensource+deli@github.com
copyright:           2019 GitHub
category:            Simulation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  if flag(dump-core)
    build-depends: dump-core
    ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core-html
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Concurrent
                     , Deli
                     , Deli.Printer
                     , Deli.Random
  build-depends:       base
                     , MonadRandom
                     , bytestring
                     , containers
                     , dlist
                     , lens
                     , monad-loops
                     , mtl
                     , mtl-c
                     , pqueue
                     , random
                     , random-fu
                     , random-source
                     , tdigest
                     , time
                     , transformers
                     , strict
  default-language:    Haskell2010
  ghc-options: -Wall -O2

executable tutorial
  hs-source-dirs:      app
  main-is:             Tutorial.lhs
  ghc-options:         -O1
  build-depends:       base
                     , bytestring
                     , containers
                     , deli
                     , mtl
                     , parallel
                     , lens
                     , monad-loops
                     , random
                     , random-fu
                     , random-source
                     , tdigest
                     , time
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O1

executable performance
  hs-source-dirs:      app
  main-is:             Performance.hs
  build-depends:       base
                     , deli
                     , random
  ghc-options:         -rtsopts -O2
  default-language:    Haskell2010

executable load-balancer
  hs-source-dirs:      app
  main-is:             LoadBalancer.hs
  ghc-options:         -O1
  build-depends:       base
                     , MonadRandom
                     , bytestring
                     , containers
                     , deli
                     , deepseq
                     , lens
                     , monad-loops
                     , mtl
                     , parallel
                     , pqueue
                     , random
                     , random-fu
                     , random-source
                     , tdigest
                     , time
  default-language:    Haskell2010
  ghc-options:         -Wall -O2


source-repository head
  type:     git
  location: https://github.com/github/deli
